deployments/vue-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app-deployment
  labels:
    app: vue-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
      - name: vue-app
        image: vue-app
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: vue-app-service
spec:
  selector:
    app: vue-app
  ports:
  - protocol: TCP
    port: 5002
